--- a/.env
+++ b/.env
@@ -1,8 +1,8 @@
 # 禁用代理设置
-HTTP_PROXY=
-HTTPS_PROXY=
-http_proxy=
-https_proxy=
+HTTP_PROXY=http://host.docker.internal:7897
+HTTPS_PROXY=http://host.docker.internal:7897
+http_proxy=http://host.docker.internal:7897
+https_proxy=http://host.docker.internal:7897
 NO_PROXY=
 no_proxy=
 
